# eMIDI

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  configure
doc/: Doxyfile  Doxyfile.in  architecture.graphml
src/: doc.dox  emiditypes.h  helpers.c  helpers.h  main.c  midifile.c  midifile.h  midifile_oop.cpp  midifile_oop.h  midiplayer.c  midiplayer.h  midiport.c  midiport.h  mybyteswap.h
src/hal/: emidi_hal.h  emidi_linux.c  emidi_memory.c  emidi_stm32f4.c  emidi_windows.c
tests/: Makefile  tests.cpp
tests/midis/: c4_0.mid  cdefgabc_0.mid  child_in_time0.mid  fish_fry0.mid  invalid.mid  model_eights_rs0.mid  turkish_march0.mid
utils/: Makefile  asyncplayer.c  create.c  dump.c  gcode.c  helpers.h  midi2array.c  player.c
